--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Aēsop">
-  <meta property="og:image" content="./assets/images/thumb.jpg">
+  <meta property="og:image" content="https://daaayeonn.github.io/work2/assets/images/thumb.jpg">
   <meta property="og:description" content="이솝은 세심한 주의를 기울여 만든 스킨, 헤어, 바디 케어 제품과 더불어 퍼스널 향수와 홈 케어 아로마 제품을 선보입니다. 온라인으로 이솝 전 레인지를 만나보세요.">
   <meta name="description" content="이솝은 세심한 주의를 기울여 만든 스킨, 헤어, 바디 케어 제품과 더불어 퍼스널 향수와 홈 케어 아로마 제품을 선보입니다. 온라인으로 이솝 전 레인지를 만나보세요.">
   <title>Aesop</title>
