--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               </li>
             </ul>
             <div class="gnb__thumb">
-              <img src="" alt class="gnb__img">
+              <img src="./assets/images/gnb_img01.avif" alt class="gnb__img">
             </div>
           </nav>
         </div>
@@ -332,13 +332,14 @@
 
   <main id="main" class="main">
     <section class="visual">
+      <h2 class="blind">visual</h2>
       <div class="visual__content">
         <div class="visual__video">
           <video src="./assets/videos/visual_video.mp4" autoplay preload="meta" muted="muted" loop="loop"></video>
         </div>
         <div class="visual__inner">
           <div class="visual__top">
-            <span class="visual__hidden">
+            <div class="visual__hidden">
               <div class="visual__text">
                 <div class="visual__wrap visual__wrap--mr uppercase">
                   <span class="visual__title visual__title--over">Power</span>
@@ -349,16 +350,16 @@
                   <span class="visual__title visual__title--under">of</span>
                 </div>
               </div>
-            </span>
-            <span class="visual__hidden">
+            </div>
+            <div class="visual__hidden">
               <div class="visual__text">
                 <div class="visual__wrap visual__wrap--ml uppercase">
                   <span class="visual__title  visual__title--over">Nature</span>
                   <span class="visual__title visual__title--under">Nature</span>
                 </div>
               </div>
-            </span>
-            <span class="visual__hidden">
+            </div>
+            <div class="visual__hidden">
               <div class="visual__icon">
                 <div class="visual__icon--wrapper visual__icon--over">
                   <i id="infinity-lottie" class="ic-infinity"></i>
@@ -371,15 +372,15 @@
                   <i class="ic-earth"><img src="./assets/images/icon_earth.svg" alt="earth" class="visual__icon--img"></i>
                 </div>
               </div>
-            </span>
+            </div>
           </div>
           <div class="visual__bottom">
             <div class="visual__desc">
               <span class="visual__hidden">
-                <p class="desc uppercase">Aesop:</p>
+                <sapn class="desc uppercase">Aesop:</sapn>
               </span>
               <span class="visual__hidden">
-                <p class="desc uppercase">In Pursuit of Well-Being</p>
+                <span class="desc uppercase">In Pursuit of Well-Being</span>
               </span>
             </div>
             <div class="visual__more">
@@ -406,7 +407,7 @@
           </div>
           <div class="intro__desc">
             <p class="intro__desc--normal">우수한 품질의 스킨, 헤어 그리고 바디 케어 제품을 만들어 내는 것이 변함없는 이솝의 목표입니다. 우리는 식물성 재료와 연구실에서 제조된 성분들을 공급하기 위해 폭넓은 조사를 하며, 반드시 효능과 안전성이 입증된 성분만을 사용합니다. 전문적인 지식을 가진 컨설턴트들은 각각 독특한 개성을 지닌 이솝 스토어에서 제품 레인지를 소개하고 적합한 제품 선택에 도움을 드립니다.</p>
-            <p class="intro__desc--big">—이솝은 세심하게 고안되어 효과적이면서도, 감각적인 즐거움을 선사하는 스킨, 헤어, 바디 케어 제품을 제공합니다.</p>
+            <p class="intro__desc--big">"이솝은 세심하게 고안되어 효과적이면서도, 감각적인 즐거움을 선사하는 스킨, 헤어, 바디 케어 제품을 제공합니다."</p>
           </div>
         </div>
       </div>
@@ -433,16 +434,16 @@
     <section class="skincare">
       <div class="skincare__inner">
         <h2 class="headline">
-          <div class="headline__text">
+          <span class="headline__text">
             <span class="headline__split hidden">
               <span class="headline__split--text headline__split--first uppercase">luxury</span>
             </span>
-          </div>
+          </span>
           <span class="headline__split hidden">
-            <div class="headline__split--wrap uppercase">
+            <span class="headline__split--wrap uppercase">
               <span class="headline__split--text headline__split--over">skincare</span>
               <span class="headline__split--text headline__split--under">skincare</span>
-            </div>
+            </span>
           </span>
         </h2>
         <div class="skincare__offer">
@@ -551,10 +552,10 @@
                 </span>
               </span>
               <span class="vision__split hidden">
-                <div class="vision__split--wrap">
+                <span class="vision__split--wrap">
                   <span class="vision__split--text vision__split--over">Effective.</span>
                   <span class="vision__split--text vision__split--under">Effective.</span>
-                </div>
+                </span>
               </span>
             </span>
             <ul class="vision__list">
@@ -596,6 +597,7 @@
     
     <section class="new-product">
       <div class="new-product__inner">
+        <h2 class="blind">new product</h2>
         <div class="new-product__content">
           <img src="./assets/images/new_product.avif" alt class="new-product__img">
           <div class="new-product__keyword">
@@ -621,16 +623,16 @@
     <section class="store">
       <div class="store__inner">
         <h2 class="headline">
-          <div class="headline__text uppercase">
+          <span class="headline__text uppercase">
             <span class="headline__split hidden">
               <span class="headline__split--text headline__split--first ">aseop</span>
             </span>
-          </div>
+          </span>
           <span class="headline__split hidden uppercase">
-            <div class="headline__split--wrap">
+            <span class="headline__split--wrap">
               <span class="headline__split--text headline__split--over">store</span>
               <span class="headline__split--text headline__split--under">store</span>
-            </div>
+            </span>
           </span>
         </h2>
         <div class="store__content">
@@ -709,16 +711,16 @@
     <section class="sound">
       <div class="sound__inner">
         <h2 class="headline">
-          <div class="headline__text uppercase">
+          <span class="headline__text uppercase">
             <span class="headline__split hidden">
               <span class="headline__split--text headline__split--first ">sound of</span>
             </span>
-          </div>
+          </span>
           <span class="headline__split hidden uppercase">
-            <div class="headline__split--wrap">
+            <span class="headline__split--wrap">
               <span class="headline__split--text headline__split--over">aesop</span>
               <span class="headline__split--text headline__split--under">aesop</span>
-            </div>
+            </span>
           </span>
         </h2>
         <div class="sound__content">
@@ -745,6 +747,7 @@
     </section>
 
     <section class="outro">
+      <h2 class="blind">outro</h2>
       <div class="outro__inner">
         <div class="outro__content">
           <div class="outro__left">
