--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       <h2 class="blind">visual</h2>
       <div class="visual__content">
         <div class="visual__video">
-          <video src="./assets/videos/visual_video.mp4" autoplay preload="meta" muted="muted" loop="loop"></video>
+          <video src="./assets/videos/visual_video.mp4" autoplay preload="metadata" muted="muted" loop="loop"></video>
         </div>
         <div class="visual__inner">
           <div class="visual__top">
@@ -377,7 +377,7 @@
           <div class="visual__bottom">
             <div class="visual__desc">
               <span class="visual__hidden">
-                <sapn class="desc uppercase">Aesop:</sapn>
+                <span class="desc uppercase">Aesop:</span>
               </span>
               <span class="visual__hidden">
                 <span class="desc uppercase">In Pursuit of Well-Being</span>
